# eai-rk3588

./: .gitattributes  LICENSE  NOTICE  README.md  README_CN.md
assets/: index.html
docs/: LLM与ModelCoordinator集成.md  README.md  README_CN.md  TTS与MeloTTS集成讨论总结.md  TTS与MeloTTS集成说明.md  YOLO与SCRFD问题排查记录.md  adapters.md  adapters_CN.md  architecture-and-runtime.md  architecture-and-runtime_CN.md  doc-readme.md  llm-model-coordinator.md  llm-model-coordinator_CN.md  troubleshooting.md  troubleshooting_CN.md  tts-melotts.md  tts-melotts_CN.md  接续开发说明.md  模型演进与待办.md  系统架构与运行逻辑.md  讨论备忘-多槽与模型演进.md  运行排障.md  适配器-LLM.md  适配器-TTS.md  适配器-YOLO.md  适配器说明.md  错误修复调试说明.md
model/: decoder-ZH_MIX_EN.rknn  encoder-ZH_MIX_EN.rknn  lexicon.txt  readme-deepseek-1.5b-w8a8-rk3588.rkllm.txt  tokens.txt
runtime/: CMakeLists.txt  build-linux.sh
runtime/adapters/llm/: llm_worker.cpp  llm_worker.h  rkllm_session.cpp  rkllm_session.h
runtime/adapters/ppocr/: text_region_probe.cpp  text_region_probe.h
runtime/adapters/scrfd/: scrfd_adapter.cpp  scrfd_adapter.h  scrfd_context.h  scrfd_postprocess.cpp  scrfd_postprocess.h
runtime/adapters/tts/: audio_player.cpp  audio_player.h  lexicon.hpp  melotts_engine.cc  melotts_engine.h  melotts_process.cc  melotts_process.h  melotts_session.cpp  melotts_session.h  split.hpp  tts_ingress.cpp  tts_ingress.h  tts_planner.cpp  tts_planner.h  tts_text_sanitizer.cpp  tts_text_sanitizer.h  tts_worker.cpp  tts_worker.h
runtime/adapters/yolo/: yolo_adapter.cpp  yolo_adapter.h  yolo_postprocess.cpp  yolo_postprocess.h
runtime/app/: config_parser.h  main.cc
runtime/capture/: camera_source.cpp  camera_source.h  frame_transform.cpp  frame_transform.h
runtime/config/: default.yaml
runtime/display/: display_layout.h  display_sink.h  opencv_display_sink.cpp  result_overlay.cpp  result_overlay.h
runtime/engine/: pipeline.cpp  pipeline.h
runtime/platform/: adapter_signals.h  llm_greeting.cpp  llm_greeting.h  logging.h  model_coordinator.cpp  model_coordinator.h  shared_state.h
runtime/utils/: CMakeLists.txt  image_utils.c  image_utils.h
runtime/viz/: result_overlay.cpp  result_overlay.h
tools/: check_config.py  check_models.sh
